improvement: light house test score

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,9 @@
     "name": "DCS Weather App PWA",
     "icons": [
         {
-            "src": "favicon.ico",
-            "sizes": "64x64 32x32 24x24 16x16",
-            "type": "image/x-icon"
+            "src": "logo.png",
+            "sizes": "860x581",
+            "type": "image/png"
         }
     ],
     "start_url": ".",
